--- a/_posts/2020-04-08-web-chapter-01.markdown
+++ b/_posts/2020-04-08-web-chapter-01.markdown
@@ -26,8 +26,9 @@ efc1e1ca6409        bridge              bridge              local
 
 After running the `docker-compose up` command, the sate of our docker conatiners, networks is as follows:
 
+
 {% highlight console %}
-$ docker container ls --format "{{.ID}}: {{.Names}}: {{.Ports}}"
+{% raw %}$ docker container ls --format "{{.ID}}: {{.Names}}: {{.Ports}}" {% endraw %}
 1f3cb046fe8c: app-web-php74: 0.0.0.0:5000->80/tcp
 c715238c051c: app-phpmyadmin: 0.0.0.0:5001->80/tcp
 b66a4f79e291: app-db-mysql: 3306/tcp, 33060/tcp
