--- a/_posts/2020-04-10-web-chapter-02.markdown
+++ b/_posts/2020-04-10-web-chapter-02.markdown
@@ -1,10 +1,14 @@
 ---
 layout: post
-title:  "Chapter 02 : Sql Injection"
+title:  "Web Vulnerabilities"
 date:   2020-04-10 23:20:58 +0530
 categories : [web exploitation]
 tags: [docker, web exploitation, infrastructure]
 ---
+
+{% include toc %}
+
+# Sql Injection
 
 ## The Database Setup
 Let us first enter the running mysql docker container, to see the initial setup of database
@@ -81,4 +85,8 @@ $query = $conn->prepare("SELECT * from users WHERE email= :email");
   $query->execute(array(':email' => $email));
 ```
 
-
+# XSS
+## XSS Payload
+```html
+ <img src=1 onerror='alert(1)'>
+```
